--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,14 @@
       <version>2.8.5</version>
     </dependency>
 
+      <!--导入lombok依赖包 -->
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>3.3</version>
+    </dependency>
+
 
     <!-- 上传组件包 -->
     <dependency>
@@ -173,6 +181,12 @@
       <artifactId>commons-codec</artifactId>
       <version>1.9</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+
   </dependencies>
 
 
@@ -208,6 +222,11 @@
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
+        </plugin>
+        <plugin>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.16.14</version>
         </plugin>
       </plugins>
     </pluginManagement>
