--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,17 @@
       <artifactId>lombok</artifactId>
     </dependency>
 
+
+    <!-- lombok -->
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.4</version>
+      <scope>provided</scope>
+    </dependency>
+
+
   </dependencies>
 
 
