--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -77,6 +77,7 @@
     <!--<location>/WEB-INF/errors/500.jsp</location>-->
   <!--</error-page>-->
 
+  <!--设置首页跳转-->
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
