--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,13 @@
           <version>1.2.17</version>
       </dependency>
 
+    <!--  应用java-jwt依赖-->
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>3.3.0</version>
+    </dependency>
+
   </dependencies>
 
 
